--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,6 @@ dependencies = [
     "numpy~=2.0.2",
     "scipy~=1.14.1",
     "tqdm~=4.67.1",
+    "librosa~=0.10.2.post1",
+    "soundfile~=0.12.1",
 ]
